fixed spacing in philosophy

--- a/philosophy.css
+++ b/philosophy.css
@@ -14,9 +14,15 @@
     background-repeat: no-repeat;
 }
 
+.philosophyimages {
+    width: 100%;
+}
+
 .philosophyimages img {
     width: 400px;
     height: 300px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 @keyframes fadein {
